<resources>
    <string name="app_name">데일리호텔</string>
    <string name="app_id">268888829950610</string>
    <string name="homepage">http://dailyhotel.kr</string>
    <string name="contact_us">help@dailyhotel.co.kr</string>
    <string name="currency">원</string>
    <string name="label_map">지도</string>
    <string name="label_list">목록</string>
    <string name="label_dailychoice">데일리초이스</string>
    <string name="label_google_map">Google Map</string>
    <string name="label_hotel">호텔</string>
    <string name="label_fnb">레스토랑</string>
    <string name="grade_special">특급</string>
    <string name="grade_1">1급</string>
    <string name="grade_2">2급</string>
    <string name="grade_3">3급</string>
    <string name="grade_hostel">호스텔</string>
    <string name="grade_boutique">부띠끄</string>
    <string name="grade_residence">레지던스</string>
    <string name="grade_biz">비지니스</string>
    <string name="grade_resort">리조트</string>
    <string name="grade_pension">펜션</string>
    <string name="grade_condo">콘도</string>
    <string name="grade_not_yet">미정</string>
    <string name="guide_title_1">당일 호텔 예약</string>
    <string name="guide_title_2">엄선된 호텔</string>
    <string name="guide_title_3">쉽고 빠른 결제</string>
    <string name="guide_title_4">놀라운 가격</string>
    <string name="guide_desc_1">사전 예약보다 편리하고 저렴하게\n오늘의 호텔을 예약하세요.</string>
    <string name="guide_desc_2">고객 만족도와 할인율을 바탕으로,\n가장 매력적인 호텔만을 제시합니다.</string>
    <string name="guide_desc_3">오전 9시에서 새벽 2시까지\n30초만에 예약하고 바로 체크인하세요.</string>
    <string name="guide_desc_4">오늘 남은 객실만을 판매하기에\n가장 저렴할 수 밖에 없습니다.\n\n그럼 오늘의 호텔을 만나볼까요?</string>
    <string name="guide_btn_skip">건너뛰기</string>
    <string name="guide_btn_start">시작</string>
    <string name="actionbar_title_hotel_list_frag">오늘의 호텔</string>
    <string name="actionbar_title_fnb_list_frag">오늘의 레스토랑</string>
    <string name="actionbar_title_booking_list_frag">예약 내역</string>
    <string name="actionbar_title_credit_frag">적립금</string>
    <string name="actionbar_title_reg_creditcard">신용카드 추가하기</string>
    <string name="actionbar_title_setting_frag">설정</string>
    <string name="actionbar_title_error_frag">dailyHOTEL</string>
    <string name="actionbar_title_wait_timer_frag">dailyHOTEL</string>
    <string name="actionbar_title_about_activity">데일리호텔이란?</string>
    <string name="actionbar_title_booking_tab_activity">예약확인</string>
    <string name="actionbar_title_faq_activity">자주 묻는 질문</string>
    <string name="actionbar_title_forgot_pwd_activity">비밀번호 찾기</string>
    <string name="actionbar_title_login_activity">로그인</string>
    <string name="actionbar_title_notice_activity">공지사항</string>
    <string name="actionbar_title_payment_activity">결제하기</string>
    <string name="actionbar_title_privacy_activity">개인정보취급방침</string>
    <string name="actionbar_title_profile_activity">프로필</string>
    <string name="actionbar_title_signup_activity">회원가입</string>
    <string name="actionbar_title_userinfo_update_activity">회원정보 수정</string>
    <string name="actionbar_title_term_activity">이용약관</string>
    <string name="actionbar_title_version_activity">버전정보</string>
    <string name="actionbar_title_zoom_map_activity">지도 확대</string>
    <string name="actionbar_title_payment_wait_activity">입금 대기</string>
    <string name="actionbar_title_creditcard_activity">신용카드 관리</string>
    <string name="actionbar_title_hoteldetailinfo_activity">호텔 정보</string>
    <string name="actionbar_title_event_list_frag">이벤트</string>
    <string name="toast_msg_network_status_bad">인터넷 연결을 할 수 없습니다.\n설정에서 확인해주세요.</string>
    <string name="toast_msg_please_chk_network_status">인터넷 연결을 할 수 없습니다.\n설정에서 확인해주세요.</string>
    <string name="toast_msg_please_input_booking_user_infos">예약자와 연락처, 이메일을 모두 입력해주십시요</string>
    <string name="toast_msg_please_input_guest">투숙자를 입력해주세요.</string>
    <string name="toast_msg_please_input_guest_typeoverseas">해외 호텔 예약시에는 투숙자를 영문 성함으로 입력해주세요.</string>
    <string name="toast_msg_please_input_contact">연락처를 입력해주세요.</string>
    <string name="toast_msg_please_input_email">이메일을 입력해주세요.</string>
    <string name="toast_msg_please_input_email_address">이메일 주소를 입력해주세요</string>
    <string name="toast_msg_wrong_email_address">올바른 이메일 형식을 입력해주세요</string>
    <string name="toast_msg_please_login">로그인이 필요합니다</string>
    <string name="toast_msg_failed_to_login">로그인에 실패했습니다</string>
    <string name="toast_msg_failed_to_get_payment_info">결제 정보를 가져올 수 없습니다.</string>
    <string name="toast_msg_retry_payment_after_install_app">해당 어플을 설치 후 다시 시도해 주세요.</string>
    <string name="toast_msg_cancel_payment">결제를 취소하셨습니다</string>
    <string name="toast_msg_profile_not_changed">변경된 사항이 없습니다.</string>
    <string name="toast_msg_profile_success_to_change">성공적으로 변경되었습니다.</string>
    <string name="toast_msg_logouted">로그아웃되었습니다.</string>
    <string name="toast_msg_logoined">로그인되었습니다.</string>
    <string name="toast_msg_please_input_id">아이디를 입력해주세요.</string>
    <string name="toast_msg_please_input_name">이름을 입력해주세요.</string>
    <string name="toast_msg_please_input_passwd">비밀번호를 입력해주세요.</string>
    <string name="toast_msg_please_input_required_infos">필수 입력사항은 모두 입력해주세요.</string>
    <string name="toast_msg_please_input_password_more_than_4chars">비밀번호를 4글자 이상 입력해주세요.</string>
    <string name="toast_msg_success_to_signup">회원가입이 완료되었습니다</string>
    <string name="toast_msg_already_latest_version">이미 최신버전입니다</string>
    <string name="toast_msg_thanks_to_your_opinion">좋은 의견 감사합니다.</string>
    <string name="toast_msg_backpressed">\'뒤로\' 버튼을 한 번 더 누르시면 앱이 종료됩니다</string>
    <string name="toast_msg_input_error_alphanum">영문, 숫자만 입력 가능합니다.</string>
    <string name="toast_msg_input_error_alphanumeric_hangul">영문, 숫자, 한글만 입력 가능합니다.</string>
    <string name="toast_msg_input_error_alphanum_name">해외 호텔 예약시에는 영문 성함만 입력 가능합니다.</string>
    <string name="toast_msg_input_error_numeric">숫자만 입력 가능합니다.</string>
    <string name="toast_msg_no_call">전화 기능이 없는 단말입니다.\n고객센터 전화번호는 1800-9120입니다.</string>
    <string name="toast_msg_dont_past_hotelinfo">이전 날짜의 호텔 정보는 조회 할 수 없습니다.</string>
    <string name="toast_msg_maxcount_ticket">한번에 구매 가능한 최대 수량은 %1$d개 입니다.</string>
    <string name="dialog_title_notice">공지</string>
    <string name="dialog_msg_sent_email">이메일이 발송되었습니다.</string>
    <string name="dialog_msg_install_paypin">PayPin 어플리케이션이 설치되어 있지 않습니다. \n설치를 눌러 진행 해 주십시요.\n취소를 누르면 결제가 취소 됩니다.</string>
    <string name="dialog_msg_install_hana_sk">HANA SK 모듈이 설치 되어있지 않습니다.\n설치 하시겠습니까?</string>
    <string name="dialog_msg_chk_wanna_login">로그아웃하시겠습니까?</string>
    <string name="dialog_msg_chk_cancel_payment">결제를 취소하시겠습니까?</string>
    <string name="dialog_msg_chk_cancel_payment_progress">결제가 진행중입니다.\n취소하시겠습니까?</string>
    <string name="dialog_msg_not_installed_kakaotalk">카카오톡이 설치되어 있지 않습니다.</string>
    <string name="dialog_msg_network_please_off_airplain">에어플레인 모드를 끄거나 WIFI를 사용해주세요.</string>
    <string name="dialog_msg_network_unstable_retry_or_set_wifi">인터넷 연결을 할 수 없습니다.\n재시도 혹은 와이파이 설정을 확인해주세요.</string>
    <string name="dialog_msg_please_update_new_version">dailyHOTEL의 새로운 버전이 출시되었습니다. 업데이트해주세요</string>
    <string name="dialog_msg_update_now">지금 업그레이드하여 가장 멋진 데일리호텔 앱을 다운받으세요</string>
    <string name="dialog_msg_sales_closed">오전 9시부터 오늘의 호텔이 공개됩니다.</string>
    <string name="dialog_msg_payment_message01">본 상품은 취소, 변경, 환불이 절대 불가한 특가 예약으로, 신중한 결정 부탁드립니다.</string>
    <string name="dialog_msg_payment_message02">\'체크인 시 배정\'의 경우 베드 타입을 보장하지 않으며 2인이 투숙할 수 있는 객실로 배정됩니다.</string>
    <string name="dialog_msg_payment_message03">미성년자는 보호자 동반시에만 투숙 가능합니다.</string>
    <string name="dialog_msg_payment_message04">휴대폰 결제는 월 30만원이 한도입니다.</string>
    <string name="dialog_msg_payment_message05">계좌이체는 거래건 고유의 가상계좌가 발급되며 10분안에 입금되지 않으면 자동으로 예약이 취소됩니다.</string>
    <string name="dialog_msg_payment_message06">취소 불가 등 위 내용에\n동의하시면 서명해 주세요</string>
    <string name="dialog_msg_payment_message07">취소 불가 등 위 내용에 동의하시면\n버튼을 눌러 결제를 진행해 주세요</string>
    <string name="dialog_msg_call">데일리호텔 고객센터로 전화 연결합니다.</string>
    <string name="dialog_btn_call">전화 연결</string>
    <string name="dialog_btn_payment_confirm">동의하고 결제 진행</string>
    <string name="dialog_title_payment_confirm">확인 사항</string>
    <string name="dialog_btn_payment_no_reserve">이벤트 호텔의 경우\n적립금 사용을 할 수 없습니다.</string>
    <string name="dialog_btn_text_update">업데이트</string>
    <string name="dialog_btn_text_complete">완료</string>
    <string name="dialog_btn_text_confirm">확인</string>
    <string name="dialog_btn_text_cancel">취소</string>
    <string name="dialog_btn_text_retry">재시도</string>
    <string name="dialog_btn_text_setting">설정</string>
    <string name="dialog_btn_text_waiting">잠시만요!</string>
    <string name="dialog_btn_text_dosetting">설정하기</string>
    <string name="dialog_btn_text_logout">로그아웃</string>
    <string name="dialog_btn_text_install">설치</string>
    <string name="dialog_btn_text_yes">예</string>
    <string name="dialog_btn_text_no">아니오</string>
    <string name="dialog_btn_text_pay">결제완료</string>
    <string name="dialog_notice2">알림</string>
    <string name="dialog_title_payment">결제알림</string>
    <string name="dialog_btn_text_see">보기</string>
    <string name="dialog_btn_install">설치</string>
    <string name="dialog_btn_update">업데이트</string>
    <string name="dialog_btn_text_close">닫기</string>
    <string name="dialog_msg_kakao_link">공유받은 호텔이 존재하지 않습니다.</string>
    <string name="dialog_msg_register_creditcard_cancel">신용카드 등록을 취소하시겠습니까?</string>
    <string name="dialog_msg_delete_register_creditcard">등록된 신용카드를 삭제하시겠습니까?</string>
    <string name="dialog_msg_error_signature">서명 내용이 부족합니다. 다시 시도해 주십시오.</string>
    <string name="dialog_msg_session_expired">세션이 만료되어 재시작합니다.</string>
    <string name="dialog_msg_processing_payment">결제가 진행 중입니다. 잠시만 기다려 주십시오.</string>
    <string name="dialog_msg_delete_failed_creditcard">신용카드 삭제를 실패하였습니다.</string>
    <string name="dialog_msg_delete_booking">이용 완료한 내역을 삭제하시겠습니까?</string>
    <string name="dialog_msg_changed_pay">객실 상황 변동으로 인하여 가격 혹은 객실이 변경되었습니다. 확인 뒤 결제해주세요.</string>
    <string name="dialog_msg_changed_bonus">적립금이 변동되었습니다.\n확인 뒤 결제해주세요.</string>
    <string name="dialog_title_used_gps">위치 서비스 사용</string>
    <string name="dialog_msg_used_gps">내 위치 정보를 사용하려면, 단말기의 설정에서 \'위치 서비스\' 사용을 허용해주세요.</string>
    <string name="frag_customer_center">고객센터</string>
    <string name="frag_call_res_contact">전화예약 &amp; 문의</string>
    <string name="frag_send_mail">의견 메일 보내기</string>
    <string name="frag_notice">공지사항</string>
    <string name="frag_faqs">자주 묻는 질문</string>
    <string name="frag_info">소개</string>
    <string name="frag_about">데일리호텔이란?</string>
    <string name="frag_app">앱</string>
    <string name="frag_version_info">버전정보</string>
    <string name="frag_account">계정</string>
    <string name="frag_about_business_license01">(주)데일리</string>
    <string name="frag_about_business_license02">대표 : 신인식 | 사업자등록번호 : 144-81-15781</string>
    <string name="frag_about_business_license03">통신판매업 신고번호 : 제2014-경기성남-0215호</string>
    <string name="frag_about_business_license04">대표연락처 : 1800-9120</string>
    <string name="act_booking_payment">결제</string>
    <string name="act_booking_price">비용</string>
    <string name="act_booking_price_real">결제금액(VAT 포함)</string>
    <string name="act_booking_pay_card">신용카드 일반결제</string>
    <string name="act_booking_pay_mobile">휴대폰</string>
    <string name="act_booking_pay_account">계좌이체</string>
    <string name="act_booking_0won">0원</string>
    <string name="label_booking_easypayment">신용카드 간편결제</string>
    <string name="act_signup_phone">[필수] 휴대폰 번호 (\'-\' 제외)</string>
    <string name="act_signup_email">[필수] 이메일</string>
    <string name="act_signup_name">[필수] 이름 (체크인시 사용)</string>
    <string name="act_signup_pwd">[필수] 비밀번호 (4자이상)</string>
    <string name="act_signup_code">[선택] 추천인 코드</string>
    <string name="act_signup_btn_signup">약관 동의하고 회원가입</string>
    <string name="act_signup_terms">이용약관</string>
    <string name="act_signup_privacy">개인정보 취급방침</string>
</resources>