<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/et_signup_phone"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="20"
        android:inputType="phone"
        android:singleLine="true"
        android:background="@drawable/edit_text_holo_light"
        android:textColorHint="@color/textView_textColor_disabled"
        android:hint="@string/act_signup_phone"/>
    
    <EditText 
        android:id="@+id/et_signup_email"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:maxLength="50"
        android:background="@drawable/edit_text_holo_light"
        android:textColorHint="@color/textView_textColor_disabled"
        android:hint="@string/act_signup_email"/>
    
    <EditText 
        android:id="@+id/et_signup_name"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:singleLine="true"
        android:maxLength="20"
        android:background="@drawable/edit_text_holo_light"
        android:textColorHint="@color/textView_textColor_disabled"
        android:hint="@string/act_signup_name"/>
    
    <EditText 
        android:id="@+id/et_signup_pwd"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLength="20"
        android:background="@drawable/edit_text_holo_light"
        android:textColorHint="@color/textView_textColor_disabled"
        android:hint="@string/act_signup_pwd"/>
    
    <EditText 
        android:id="@+id/et_signup_recommender"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:maxLength="10"
        android:background="@drawable/edit_text_holo_light"
        android:textColorHint="@color/textView_textColor_disabled"
        android:hint="@string/act_signup_code"/>
	
    <Button 
        android:id="@+id/btn_signup"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|center_vertical"
        android:background="@drawable/shape_button_common_background"
        android:textColor="@android:color/white"
        android:text="@string/act_signup_btn_signup"/>
    
    <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
         	
            <TextView 
                android:id="@+id/tv_signup_agreement"
	            android:layout_width="0dp"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.5"
	            android:gravity="center"
	            android:textColor="@color/textView_textColor_sub"
	            android:text="@string/act_signup_terms"/>
            
            <TextView
                android:id="@+id/tv_signup_personal_info" 
	            android:layout_width="0dp"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.5"
	            android:gravity="center"
	            android:textColor="@color/textView_textColor_sub"
	            android:text="@string/act_signup_privacy"/>
            
        </LinearLayout>
    
</LinearLayout>