<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/dailyInformationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/facebookLinkView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/setting_facebook"
                android:paddingTop="10dp"/>

            <ImageView
                android:id="@+id/instagramLinkView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/setting_instagram"
                android:paddingTop="10dp"/>

            <ImageView
                android:id="@+id/naverLinkView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/setting_blog"
                android:paddingTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.twoheart.dailyhotel.view.widget.DailyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_about_business_license01"
                android:textColor="@color/setting_business_license"
                android:textSize="10dp"
                android:textStyle="bold"/>

            <com.twoheart.dailyhotel.view.widget.DailyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/frag_about_business_license02"
                android:textColor="@color/setting_business_license"
                android:textSize="10dp"/>
        </LinearLayout>

        <com.twoheart.dailyhotel.view.widget.DailyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/frag_about_business_license03"
            android:textColor="@color/setting_business_license"
            android:textSize="10dp"/>

        <com.twoheart.dailyhotel.view.widget.DailyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="right|center_vertical"
            android:text="@string/frag_about_business_license04"
            android:textColor="@color/setting_business_license"
            android:textSize="10dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dailyInformationView"
        android:background="#fdfdfd"
        android:paddingTop="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <!-- 계정 -->

            <com.twoheart.dailyhotel.view.widget.DailyTextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/frag_account"
                android:textColor="@color/textView_textColor_sub"
                android:textSize="13.5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/setting_fragment_section_border"/>

            <LinearLayout
                android:id="@+id/ll_setting_login"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="horizontal"
                android:paddingLeft="17dp">

                <com.twoheart.dailyhotel.view.widget.DailyTextView
                    android:id="@+id/tv_setting_login"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/textView_textColor_main"
                    android:textSize="16.5dp"/>

                <com.twoheart.dailyhotel.view.widget.DailyTextView
                    android:id="@+id/tv_setting_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="right|center_vertical"
                    android:paddingRight="17dp"
                    android:singleLine="true"
                    android:textColor="@color/textView_textColor_sub"
                    android:textSize="16.5dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settingCardLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.twoheart.dailyhotel.view.widget.DailyTextView
                    android:id="@+id/settingCardTextView"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="17dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/actionbar_title_creditcard_activity"
                    android:textColor="@color/textView_textColor_main"
                    android:textSize="16.5dp"/>
            </LinearLayout>

            <!-- 고객센터 -->

            <com.twoheart.dailyhotel.view.widget.DailyTextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/frag_customer_center"
                android:textColor="@color/textView_textColor_sub"
                android:textSize="13.5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/setting_fragment_section_border"/>

            <com.twoheart.dailyhotel.view.widget.DailyTextView
                android:id="@+id/tv_setting_call"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center_vertical"
                android:paddingLeft="17dp"
                android:text="@string/frag_call_res_contact"
                android:textColor="@color/textView_textColor_main"
                android:textSize="16.5dp"/>

            <com.twoheart.dailyhotel.view.widget.DailyTextView
                android:id="@+id/tv_setting_mail"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center_vertical"
                android:paddingLeft="17dp"
                android:text="@string/frag_send_mail"
                android:textColor="@color/textView_textColor_main"
                android:textSize="16.5dp"/>

            <com.twoheart.dailyhotel.view.widget.DailyTextView
                android:id="@+id/tv_setting_notice"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center_vertical"
                android:paddingLeft="17dp"
                android:text="@string/frag_notice"
                android:textColor="@color/textView_textColor_main"
                android:textSize="16.5dp"
                android:visibility="gone"/>

            <com.twoheart.dailyhotel.view.widget.DailyTextView
                android:id="@+id/tv_setting_help"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center_vertical"
                android:paddingLeft="17dp"
                android:text="@string/frag_faqs"
                android:textColor="@color/textView_textColor_main"
                android:textSize="16.5dp"
                android:visibility="gone"/>

            <!-- 소개 -->

            <com.twoheart.dailyhotel.view.widget.DailyTextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/frag_info"
                android:textColor="@color/textView_textColor_sub"
                android:textSize="13.5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/setting_fragment_section_border"/>

            <com.twoheart.dailyhotel.view.widget.DailyTextView
                android:id="@+id/tv_setting_introduction"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center_vertical"
                android:paddingLeft="17dp"
                android:text="@string/frag_about"
                android:textColor="@color/textView_textColor_main"
                android:textSize="16.5dp"/>

            <!-- 앱 -->

            <com.twoheart.dailyhotel.view.widget.DailyTextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/frag_app"
                android:textColor="@color/textView_textColor_sub"
                android:textSize="13.5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/setting_fragment_section_border"/>

            <LinearLayout
                android:id="@+id/ll_setting_version"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="horizontal"
                android:paddingLeft="17dp">

                <com.twoheart.dailyhotel.view.widget.DailyTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="left|center_vertical"
                    android:text="@string/frag_version_info"
                    android:textColor="@color/textView_textColor_main"
                    android:textSize="16.5dp"/>

                <com.twoheart.dailyhotel.view.widget.DailyTextView
                    android:id="@+id/tv_setting_version"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="right|center_vertical"
                    android:paddingRight="17dp"
                    android:textColor="@color/textView_textColor_sub"
                    android:textSize="16.5dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>