<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- 결제 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_section_background"
        android:orientation="horizontal"
        android:paddingBottom="9dp"
        android:paddingLeft="13dp"
        android:paddingTop="20dp" >

        <com.twoheart.dailyhotel.view.widget.DailyCustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/act_booking_payment"
            android:textColor="@color/textView_textColor_section"
            android:textSize="12.5dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="78dp"
            android:layout_marginRight="15dp" >

            <com.twoheart.dailyhotel.view.widget.DailyCustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_booking_price"
                android:textColor="@color/booking_subtext"
                android:textSize="15dp" />

            <com.twoheart.dailyhotel.view.widget.DailyCustomFontTextView
                android:id="@+id/ticketPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/act_booking_0won"
                android:textColor="@color/booking_subtext"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="78dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp" >

            <com.twoheart.dailyhotel.view.widget.DailyCustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/act_booking_price_real"
                android:textColor="@drawable/selector_textview_textcolor"
                android:textSize="15dp" />

            <com.twoheart.dailyhotel.view.widget.DailyCustomFontTextView
                android:id="@+id/ticketPaymentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right|center_vertical"
                android:text="@string/act_booking_0won"
                android:textColor="@color/textView_textColor_main"
                android:textSize="15dp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/booking_hline" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- 카드 관리 버튼 -->

        <ImageView
            android:id="@+id/cardManagerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/payment_ic_card" />

        <!-- 결제 종류 선택 -->

        <RadioGroup
            android:id="@+id/paymentRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/cardManagerButton"
            android:orientation="vertical" >

            <com.twoheart.dailyhotel.view.widget.DailyCustomFontRadioButton
                android:id="@+id/easyPaymentRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:button="@drawable/abc_btn_radio_material"
                android:buttonTint="@color/actionbar_hamburger"
                android:text="@string/label_booking_easypayment"
                android:textColor="@color/textView_textColor_main"
                android:textSize="15dp" />

            <com.twoheart.dailyhotel.view.widget.DailyCustomFontRadioButton
                android:id="@+id/cardPaymentRadionButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:button="@drawable/abc_btn_radio_material"
                android:buttonTint="@color/actionbar_hamburger"
                android:text="@string/act_booking_pay_card"
                android:textColor="@color/textView_textColor_main"
                android:textSize="15dp" />

            <com.twoheart.dailyhotel.view.widget.DailyCustomFontRadioButton
                android:id="@+id/hpPaymentRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:button="@drawable/abc_btn_radio_material"
                android:buttonTint="@color/actionbar_hamburger"
                android:text="@string/act_booking_pay_mobile"
                android:textColor="@color/textView_textColor_main"
                android:textSize="15dp" />

            <com.twoheart.dailyhotel.view.widget.DailyCustomFontRadioButton
                android:id="@+id/accountPaymentRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:button="@drawable/abc_btn_radio_material"
                android:buttonTint="@color/actionbar_hamburger"
                android:paddingRight="15dp"
                android:text="@string/act_booking_pay_account"
                android:textColor="@color/textView_textColor_main"
                android:textSize="15dp" />
        </RadioGroup>
    </RelativeLayout>

</LinearLayout>